<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="item">Item</string>
    <string name="create_a_new_project">Create a new Project</string>
    <string name="groupin">GroupIn</string>
    <string name="your_projects">Your Projects</string>
    <string name="calendar">Calendar</string>
    <string name="project_name">Project Name</string>
    <string name="enter_project_name">Enter Project Name</string>
    <string name="new_project">New Project</string>
    <string name="create_project">Create Project</string>
</resources>